src/component/content-rating-alert/content-rating-alert.scss
content-rating-alert {
  .display-inline {
    display: inline;
  }
  .heading1{
    color: map-get($colors, dark);
    margin-bottom: 3%;
    font-size: 1.6rem;
    padding: 0;
    margin-left: 0;
    font-weight: bold;
  }
.heading2{
    margin-top: 5px;
}
.text-gray-color {
  color: gray;
  font-family: 'OpenSans/Regular';
  margin-top: 6px;
}
.subtitle {
  text-transform: capitalize;
  font-size: 1.3em;
  font-weight: 700;
  color: map-get($colors, primary_black);
}
.feedback{

        border-top: 0px;
        // height: 50px;
        // font-size: 20px;
        border-left: 0px;
        border-right: 0px;
        border-bottom: 2px solid gray;
        padding-top: 12px;
    }
    ul {
        padding: 0px;
        margin: 0px;

        &.rating li {
          padding: 1px 1px !important;
          background: none;
          // color:map-get($colors, primary);
          color: gray;
          ion-icon {
            font-size: 35px;
          }
        }
      }
}

.content-rating-alert .popover-content {
    margin: 0;
    width: 100% !important;
    height: auto;
    box-shadow: unset;
    position: fixed;
    left: 0 !important;
    top: unset !important;
    bottom: 0;
    transform-origin: bottom -100% !important;
    transform: translateY(0) !important;
    overflow-y: hidden;
  }

